--- a/app/pom.xml
+++ b/app/pom.xml
@@ -23,7 +23,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>de.flapdoodle.embed</groupId>
+            <artifactId>de.flapdoodle.embed.mongo</artifactId>
+        </dependency>
+        
         <!-- Tests -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
