--- a/pom.xml
+++ b/pom.xml
@@ -26,18 +26,13 @@
 
         <!-- plugin versions -->        
         <resolve.parent.version.plugin.version>0.8</resolve.parent.version.plugin.version>
-        
+        <jreleaser.version>0.5.0</jreleaser.version>
+
         <!-- dependency versions -->
-        <flapdoodle.mongo.version>3.0.0</flapdoodle.mongo.version>
     </properties>
     
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>de.flapdoodle.embed</groupId>
-                <artifactId>de.flapdoodle.embed.mongo</artifactId>
-                <version>${flapdoodle.mongo.version}</version>
-            </dependency>
         </dependencies>
     </dependencyManagement>
     
@@ -76,11 +71,4 @@
         </plugins>
     </build>
 
-    <repositories>
-        <repository>
-            <id>flapdoodle</id>
-            <name>Flap doodle repository</name>
-            <url>http://oss.sonatype.org/content/repositories/snapshots</url>
-        </repository>
-    </repositories>
 </project>
