--- a/app/pom.xml
+++ b/app/pom.xml
@@ -153,7 +153,7 @@
                                             </jlink>
                                         </assemble>
                                         <distributions>
-                                            <dd-app>
+                                            <drd-app>
                                                 <active>RELEASE</active>
                                                 <type>JLINK</type>
                                                 <artifacts>
@@ -166,7 +166,7 @@
                                                         <platform>windows</platform>
                                                     </artifact>
                                                 </artifacts>
-                                            </dd-app>
+                                            </drd-app>
                                         </distributions>
                                     </jreleaser>
                                 </configuration>
