DD-22: Implement testing model with DDL scripts running on start by flyway

--- a/app/src/main/resources/application.yaml
+++ b/app/src/main/resources/application.yaml
@@ -2,3 +2,7 @@ spring:
   main:
     banner-mode: off
     web-application-type: none
+    
+#  flyway:
+#    enabled: true
+#    locations: "classpath:db/migration"
