--- a/app/pom.xml
+++ b/app/pom.xml
@@ -23,6 +23,32 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derby</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
+        <!-- masci.cz dependencies -->
+        
+        <dependency>
+            <groupId>cz.masci.drd</groupId>
+            <artifactId>database</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cz.masci.drd</groupId>
+            <artifactId>service</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cz.masci.drd</groupId>
+            <artifactId>dto</artifactId>
+        </dependency>
         
         <!-- Tests -->
         <dependency>
