--- a/app/src/main/resources/application.yaml
+++ b/app/src/main/resources/application.yaml
@@ -2,6 +2,10 @@ spring:
   main:
     banner-mode: off
     web-application-type: none
+
+  datasource:
+    url: jdbc:derby:directory:drd-db;create=true
+    username: drd
     
 #  flyway:
 #    enabled: true
