--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>model</module>
         <module>persistence</module>
         <module>service</module>
+        <module>ui</module>
     </modules>
     
     <properties>
@@ -36,6 +37,8 @@
         <!-- dependency versions -->
         <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
         <flyway.version>7.0.0</flyway.version>
+        <javafx.weaver.version>1.3.0</javafx.weaver.version>
+        <javafx.version>16</javafx.version>
     </properties>
     
     <dependencyManagement>
@@ -66,6 +69,11 @@
                 <artifactId>service</artifactId>
                 <version>${revision}</version>
             </dependency>
+            <dependency>
+                <groupId>cz.masci.drd</groupId>
+                <artifactId>ui</artifactId>
+                <version>${revision}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.mapstruct</groupId>
@@ -77,7 +85,22 @@
                 <artifactId>mapstruct-processor</artifactId>
                 <version>${org.mapstruct.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>net.rgielen</groupId>
+                <artifactId>javafx-weaver-spring-boot-starter</artifactId>
+                <version>${javafx.weaver.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-controls</artifactId>
+                <version>${javafx.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-fxml</artifactId>
+                <version>${javafx.version}</version>
+            </dependency>
+            
             <dependency>
                 <groupId>org.flywaydb.flyway-test-extensions</groupId>
                 <artifactId>flyway-spring5-test</artifactId>
