DD-10: Implement abstract master-detail-view pattern for monsters

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -22,7 +22,11 @@
             <groupId>cz.masci.drd</groupId>
             <artifactId>dto</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>cz.masci.springfx</groupId>
+            <artifactId>springfx-data</artifactId>
+        </dependency>
+        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
