--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
     <flyway.version>7.0.0</flyway.version>
     <javafx.weaver.version>1.3.0</javafx.weaver.version>
     <javafx.version>17.0.0.1</javafx.version>
+    <controlsfx.version>11.1.0</controlsfx.version>
   </properties>
     
   <dependencyManagement>
@@ -154,6 +155,12 @@
         <classifier>linux</classifier>
       </dependency>
             
+      <dependency>
+        <groupId>org.controlsfx</groupId>
+        <artifactId>controlsfx</artifactId>
+        <version>${controlsfx.version}</version>
+      </dependency>
+      
       <dependency>
         <groupId>org.flywaydb.flyway-test-extensions</groupId>
         <artifactId>flyway-spring5-test</artifactId>
