--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -24,5 +24,10 @@
       <groupId>cz.masci.springfx</groupId>
       <artifactId>master-view-editor</artifactId>
     </dependency>
+    
+    <dependency>
+      <groupId>org.controlsfx</groupId>
+      <artifactId>controlsfx</artifactId>
+    </dependency>
   </dependencies>
 </project>
