--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -1,68 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
     
-    <parent>
-        <groupId>cz.masci.drd</groupId>
-        <artifactId>drd-application</artifactId>
-        <version>${revision}</version>
-    </parent>
-    
+  <parent>
     <groupId>cz.masci.drd</groupId>
-    <artifactId>ui</artifactId>    
+    <artifactId>drd-application</artifactId>
     <version>${revision}</version>
-    <name>DrD: UI</name>
-    <description>DrD UI</description>
+  </parent>
     
-    <dependencies>
-        <dependency>
-            <groupId>cz.masci.drd</groupId>
-            <artifactId>service</artifactId>
-        </dependency>
+  <groupId>cz.masci.drd</groupId>
+  <artifactId>ui</artifactId>    
+  <version>${revision}</version>
+  <name>DrD: UI</name>
+  <description>DrD UI</description>
+    
+  <dependencies>
+    <dependency>
+      <groupId>cz.masci.drd</groupId>
+      <artifactId>service</artifactId>
+    </dependency>
         
-        <dependency>
-            <groupId>net.rgielen</groupId>
-            <artifactId>javafx-weaver-spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <classifier>win</classifier>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-fxml</artifactId>
-            <classifier>win</classifier>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-base</artifactId>
-            <classifier>win</classifier>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-graphics</artifactId>
-            <classifier>win</classifier>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <classifier>linux</classifier>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-fxml</artifactId>
-            <classifier>linux</classifier>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-base</artifactId>
-            <classifier>linux</classifier>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-graphics</artifactId>
-            <classifier>linux</classifier>
-        </dependency>
-    </dependencies>
+    <dependency>
+      <groupId>cz.masci.springfx</groupId>
+      <artifactId>master-view-editor</artifactId>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.controlsfx</groupId>
+      <artifactId>controlsfx</artifactId>
+    </dependency>
+  </dependencies>
 </project>
