--- a/persistence/src/test/resources/application.yaml
+++ b/persistence/src/test/resources/application.yaml
@@ -7,6 +7,12 @@ spring:
     url: jdbc:derby:memory:SA;DB_CLOSE_DELAY=-1;DATABASE_TO_LOWER=TRUE
     username: SA
     
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        
 #  flyway:
 #    enabled: true
 #    locations: "classpath:db/migration"
